# neural_prophet

./: .coverage  .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TEST  TODOs.md  bifrost_demo_trend.ipynb  bifrost_notebook.ipynb  bifrost_wireframe.ipynb  changelogs.md  codecov.yml  contributing.md  contributors.md  development_timeline.md  forecaster.py  get_started_contributing.md  ideas_papers_inspiration.md  mkdocs.yml  placeholder.py  prophet_comparison.py  prophet_demo.ipynb  prophet_notebook.ipynb  prophet_tutorials.ipynb  pyproject.toml  repro.np  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  setup_hooks.py  test.travis.yml  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-format.yml  ci.yml  cml.yml  codeql-analysis.yml  linters.yml  metrics.yml  test-docs.yml  tests.yml  website.yml
_site/html/: index.html
bootcamp/: Notes.ipynb
code/: bifrost.py  make_dataset.py  model.py  plotting.py  test_bifrost.py  utils.py  v01_training.py
data/: example_wp_log_peyton_manning.csv
docs/: CNAME  Makefile  README.md  check_nblink_files.py  hyperparameter-selection.md  make.bat  model-overview.md  tips_first_model.md
docs/doctrees/: environment.pickle  index.doctree
docs/feature-guides-archive/: global_modeling.ipynb  prophet_to_torch_prophet.ipynb  trend_peyton_manning.ipynb
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/model/: auto-regression.md  events.md  future-regressors.md  lagged-regressors.md  seasonality.md  trend.md
docs/source/: Live_plot_during_training.nblink  Prophet_to_TorchProphet.nblink  application-tutorials.rst  auto-regression.md  autoregression_yosemite_temps.nblink  benchmarking.nblink  changes-from-prophet.md  collect_predictions.nblink  community.rst  conf.py  contents.rst  energy_hospital_load.nblink  energy_solar_pv.nblink  events.md  events_holidays_peyton_manning.nblink  feature-tutorials.rst  forecaster.rst  future-regressors.md  global_local_modeling.nblink  global_modeling.nblink  global_models.md  hyperparameter-selection.md  index.rst  lagged-regressors.md  lagged_covariates_energy_ercot.nblink  legacy.rst  metrics.rst  model-overview.md  network_architecture_visualization.nblink  plotly.nblink  quickstart.ipynb  quickstart.md  season_multiplicative_air_travel.nblink  seasonality.md  sparse_autoregression_yosemite_temps.nblink  trend.md  (+6 more)
example_data/: 1_LondonDataStore.csv  2_ERCOT__all_DAM.csv  3_Raleigh_PV_GHI_NRERL.csv  4_RTE_consumption.csv  potential_datasets.md
example_notebooks/: Untitled.ipynb  autoregression_yosemite_temps.ipynb  crossvalidation-Copy1.ipynb  crossvalidation.ipynb  demo_auto_regression.ipynb  demo_events.ipynb  demo_future_regressors.ipynb  demo_seasonality.ipynb  demo_seasonality2.ipynb  demo_short.ipynb  demo_snippets.ipynb  demo_trend.ipynb  energy_data_example.ipynb  events_holidays_peyton_manning.ipynb  global_modeling_example.ipynb  lagged_covariates_energy_ercot.ipynb  peyton_manning.ipynb  prophet_demo.ipynb  prophet_test.ipynb  regularization.ipynb  run_prophet.py  season_multiplicative_air_travel.ipynb  sparse_autoregression_Raleigh_PV.ipynb  sparse_autoregression_yosemite_temps.ipynb  sub_daily_data_debugipynb  sub_daily_data_yosemite_temps.ipynb  synthetic_data.ipynb  syntheticdata.ipynb  trend_peyton_manning.ipynb  trend_regularization_auto_changepoint_peyton_manning.ipynb  uncertainty_estimation_peyton_manning.ipynb
htmlcov/: coverage_html.js  index.html  neuralprophet___init___py.html  neuralprophet_configure_py.html  neuralprophet_df_utils_py.html  neuralprophet_forecaster_py.html  neuralprophet_hdays_py.html  neuralprophet_metrics_py.html  neuralprophet_plot_forecast_py.html  neuralprophet_plot_model_parameters_py.html  neuralprophet_time_dataset_py.html  neuralprophet_time_net_py.html  neuralprophet_utils_py.html  neuralprophet_utils_torch_py.html  status.json  style.css  tests_test_integration_py.html  tests_test_unit_py.html
neuralprophet/: TorchProphet.py  __init__.py  __main__.py  _version.py  benchmark.py  classification.py  config_classes.py  configure.py  configure_components.py  conformal.py  conformal_prediction.py  custom_loss_metrics.py  df_utils.py  event_utils.py  forecaster.py  hdays.py  hdays_utils.py  logger.py  make_dataset.py  metrics.py  model.py  neural_prophet.py  np_types.py  plot_forecast._matplotlib.py  plot_forecast.py  plot_forecast_matplotlib.py  plot_forecast_plotly.py  plot_model_parameters.py  plot_model_parameters_matplotlib.py  plot_model_parameters_plotly.py  plot_plotly.py  plot_utils.py  plotting.py  plotting_utils.py  rev_normalization.py  test_bifrost.py  test_debug.py  time_dataset.py  time_net.py  torch_prophet.py  (+9 more)
neuralprophet.egg-info/: PKG-INFO  SOURCES.txt
noteboks/: bifrost_demo_auto_regression.ipynb  bifrost_demo_holiday_events.ipynb  bifrost_demo_seasonality.ipynb  bifrost_test.ipynb  demo_auto_regression.ipynb  demo_seasonality.ipynb  demo_short.ipynb  demo_trend.ipynb  run_prophet.py
notes/: development_timeline.md  random_ideas_papers_inspiration.md
requirements/: base.txt  dev.txt  develop.txt  docs.txt
scripts/: install_hooks.bash  neuralprophet_dev_setup  pre_commit.bash  pre_push.bash  run_unittests.bash  setup.sh
source/: conf.py  index.rst
tests/: .coverage  __init__.py  debug.py  debug_timedataset.py  fix-1493.py  pytest.ini  t_test_debug.py  t_test_unit.py  temp_plotly_performance.ipynb  temp_plotly_performance.py  test_accuracy.py  test_benchmark.py  test_cli.py  test_coefficient_retrieval.py  test_configure.py  test_debug.py  test_event_utils.py  test_future_regressor_nn.py  test_glocal.py  test_hdays_utils.py  test_integration.py  test_model_performance.py  test_plotting.py  test_regularization.py  test_save.py  test_train_config.py  test_uncertainty.py  test_unit.py  test_utils.py  test_wrapper.py
tutorials/: README.md  dev_skip-future.ipynb  lightning.ipynb
(+410 files in other folders)
